@@ -54,7 +54,6 @@
 				DD4BAB7C0470C44C00A8A065,
 				20D5CC6404E7AA0500000106,
 				E8A66F030272453F03A80106,
-				DD5284490510553000A8A065,
 				DDDB7ABD05D7736600E197C2,
 				20E74F4904E9089700000106,
 				20B8891A04E924CD00000106,
@@ -87,7 +86,6 @@
 				872EBC6A04E42E320073D10E,
 				20D5CC6304E7AA0500000106,
 				872EBC6204E42E320073D10E,
-				DD0E91A4050F77A700A8A065,
 				DDDB7AD605D773B400E197C2,
 				20E74F4804E9089700000106,
 				20B8891904E924CD00000106,
@@ -737,7 +735,6 @@
 				874206070564168A00CFC3F1,
 				874206080564168A00CFC3F1,
 				874206090564168A00CFC3F1,
-				8742060A0564168A00CFC3F1,
 				DDDB7AD705D773B400E197C2,
 			);
 			isa = PBXHeadersBuildPhase;
@@ -941,15 +938,6 @@
 			settings = {
 			};
 		};
-		8742060A0564168A00CFC3F1 = {
-			fileRef = DD0E91A4050F77A700A8A065;
-			isa = PBXBuildFile;
-			settings = {
-				ATTRIBUTES = (
-					Public,
-				);
-			};
-		};
 		8742060B0564168A00CFC3F1 = {
 			buildActionMask = 2147483647;
 			files = (
@@ -1114,7 +1102,6 @@
 				874206340564168A00CFC3F1,
 				874206350564168A00CFC3F1,
 				874206360564168A00CFC3F1,
-				874206370564168A00CFC3F1,
 				DDDB7ABF05D7736600E197C2,
 			);
 			isa = PBXSourcesBuildPhase;
@@ -1236,12 +1223,6 @@
 		};
 		874206360564168A00CFC3F1 = {
 			fileRef = 20B88B6104E948FA00000106;
-			isa = PBXBuildFile;
-			settings = {
-			};
-		};
-		874206370564168A00CFC3F1 = {
-			fileRef = DD5284490510553000A8A065;
 			isa = PBXBuildFile;
 			settings = {
 			};
@@ -1674,15 +1655,6 @@
 //DD2
 //DD3
 //DD4
-		DD0E91A4050F77A700A8A065 = {
-			fileEncoding = 30;
-			isa = PBXFileReference;
-			lastKnownFileType = sourcecode.c.h;
-			name = iTermImageView.h;
-			path = Headers/iTerm/iTermImageView.h;
-			refType = 4;
-			sourceTree = "<group>";
-		};
 		DD48F1C703EBB1C400A8A065 = {
 			isa = PBXFileReference;
 			lastKnownFileType = text.plist.xml;
@@ -1713,14 +1685,6 @@
 			isa = PBXFileReference;
 			lastKnownFileType = sourcecode.c.objc;
 			path = FindPanelWindowController.m;
-			refType = 4;
-			sourceTree = "<group>";
-		};
-		DD5284490510553000A8A065 = {
-			fileEncoding = 4;
-			isa = PBXFileReference;
-			lastKnownFileType = sourcecode.c.objc;
-			path = iTermImageView.m;
 			refType = 4;
 			sourceTree = "<group>";
 		};
